--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,6 @@
       <button><i class="fa-solid fa-paper-plane"></i></button>
     </div>
   </div>
-
+  <script src="/public/js/state.js"></script>
 </body>
 </html>
