--- a/public/register.html
+++ b/public/register.html
@@ -16,7 +16,7 @@
 
 <body>
   <!-- LOGIN FORM -->
-  <div class="container">
+  <div class="container" id="login-container">
     <h1>Weroom Login</h1>
     <form id="login-form">
       <div class="form-group">
@@ -40,9 +40,9 @@
   </div>
 
   <!-- REGISTER FORM -->
-  <div class="container" id="register-form" style="display:none;">
+  <div class="container" id="register-container" style="display:none;">
     <h1>Weroom Register</h1>
-    <form>
+    <form id="register-form">
       <div class="form-group">
         <label for="register-nickname">Nickname</label>
         <input type="text" id="register-nickname" name="nickname" placeholder="Choose a nickname" required />
@@ -97,8 +97,18 @@
     </p>
   </div>
 
+  <!-- MODAL POPUP -->
+<div id="popup-modal" class="modal">
+  <div class="modal-content">
+    <button class="modal-close" onclick="closeModal()">&times;</button>
+    <i class="fa-solid" id="modal-icon"></i>
+    <div class="modal-message" id="modal-message">Message goes here</div>
+  </div>
+</div>
+
   <script src="/public/js/switch.js"></script>
   <script src="/public/js/login.js"></script>
+  <script src="/public/js/register.js"></script>
 </body>
 
 </html>
