--- a/public/register.html
+++ b/public/register.html
@@ -106,9 +106,9 @@
   </div>
 </div>
 
-  <script src="/public/js/switch.js"></script>
-  <script src="/public/js/login.js"></script>
-  <script src="/public/js/register.js"></script>
+  <script type="module" src="/public/js/switch.js"></script>
+  <script type="module" src="/public/js/login.js"></script>
+  <script type="module" src="/public/js/register.js"></script>
 </body>
 
 </html>
