websocket is crazy

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,11 @@
   <div class="navbar">
     <div class="brand"><i class="fa-solid fa-comments"></i> Weroom</div>
     <div class="user-info">
-      <span><i class="fa-solid fa-user"></i> Saher</span>
-      <button><i class="fa-solid fa-right-from-bracket"></i> Logout</button>
+      <span id="nickname"></span>
+      <a href="/auth" id="authenticate" class="navbar-button">
+  <i class="fa-solid fa-right-from-bracket"></i> Login
+</a>
+
     </div>
   </div>
 
