--- a/public/index.html
+++ b/public/index.html
@@ -6,55 +6,19 @@
   <title>Weroom - Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/public/css/index.css">
+  <link rel="stylesheet" href="/public/css/register.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
 </head>
 
 <body>
 
-  <!-- NAVBAR -->
-  <div class="navbar">
-    <div class="brand"><i class="fa-solid fa-comments"></i> Weroom</div>
-    <div class="user-info">
-      <span id="nickname"></span>
-      <a href="/auth" id="authenticate" class="navbar-button">
-  <i class="fa-solid fa-right-from-bracket"></i> Login
-</a>
-
-    </div>
-  </div>
-
-  <!-- MAIN LAYOUT -->
-  <div class="layout">
-    <!-- SIDEBAR USERS -->
-    <div class="sidebar">
-      <h3>Users</h3>
-      <ul class="user-list">
-        <!-- and here too  -->
-      </ul>
-    </div>
-
-    <!-- POSTS MAIN CONTENT -->
-    <div class="main-content" id="main-content">
-      <!-- data will be filled here incha'allah  -->
-  </div>
-
-  <!-- CHAT BOX -->
-  <div class="chat-box">
-    <div class="chat-header">
-      <i class="fa-solid fa-comment-dots"></i> Messages
-    </div>
-    <div class="chat-messages">
-      <p><strong>Ryad:</strong> Hello!</p>
-      <p><strong>You:</strong> Hey, what's up?</p>
-    </div>
-    <div class="chat-input">
-      <input type="text" placeholder="Type a message..." />
-      <button><i class="fa-solid fa-paper-plane"></i></button>
-    </div>
-  </div>
-  <script type="module" src="/public/js/post.js"></script>
+  <!--  -->
 
   <script type="module" src="/public/js/state.js"></script>
+
+  <script type="module" src="/public/js/login.js"></script>
+
+  <script type="module" src="/public/js/switch.js"></script>
 </body>
 
 </html>
