routing zith js? interesting

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
   <script type="module" src="/public/js/login.js"></script>
 
   <script type="module" src="/public/js/switch.js"></script>
+
+  <script type="module" src="/public/js/main.js"></script>
 </body>
 
 </html>
