almost finished with comments

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 <body>
 
   <!--  -->
+  <script type="module" src="/public/js/comment.js"></script>
 
   <script type="module" src="/public/js/state.js"></script>
 
